# cml2gns

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  python-publish.yml
cml2gns/: __init__.py  __main__.py  cli.py  converter.py
cml2gns/generators/: cml_generator.py  containerlab_generator.py  gns3_generator.py
cml2gns/models/: cml_model.py  gns3_model.py  virl_model.py
cml2gns/parsers/: cml_parser.py  containerlab_parser.py  gns3_parser.py  virl_parser.py
cml2gns/utils/: annotations.py  config.py  config_transform.py  gns3_api.py  node_mappings.py  topology_diff.py  validators.py  visualizer.py
tests/: test_cli.py  test_converter.py  test_generator.py  test_gns3_api.py  test_models.py  test_new_features.py  test_node_mappings.py  test_parsers.py  test_round_trip.py  test_validators.py
tests/fixtures/cml_samples/: sample_topology_list.yaml
tests/fixtures/containerlab_samples/: sample.clab.yml
